Rename the library to Conduit, for a lower-level layer first.

--- a/META.in
+++ b/META.in
@@ -1,30 +1,30 @@
 version = "@VERSION@"
 description = "Resolve URIs into Async or Lwt channels"
 requires = "@BASE_REQUIRES@"
-archive(byte) = "uri-conduit.cma"
-archive(byte, plugin) = "uri-conduit.cma"
-archive(native) = "uri-conduit.cmxa"
-archive(native, plugin) = "uri-conduit.cmxs"
-exists_if = "uri-conduit.cma"
+archive(byte) = "conduit.cma"
+archive(byte, plugin) = "conduit.cma"
+archive(native) = "conduit.cmxa"
+archive(native, plugin) = "conduit.cmxs"
+exists_if = "conduit.cma"
 
 package "lwt" (
  version = "@VERSION@"
  description = "Resolve URIs into Lwt channels"
- requires = "uri-conduit @LWT_REQUIRES@"
- archive(byte) = "uri-conduit-lwt.cma"
- archive(byte, plugin) = "uri-conduit-lwt.cma"
- archive(native) = "uri-conduit-lwt.cmxa"
- archive(native, plugin) = "uri-conduit-lwt.cmxs"
- exists_if = "uri-conduit-lwt.cma"
+ requires = "conduit @LWT_REQUIRES@"
+ archive(byte) = "conduit-lwt.cma"
+ archive(byte, plugin) = "conduit-lwt.cma"
+ archive(native) = "conduit-lwt.cmxa"
+ archive(native, plugin) = "conduit-lwt.cmxs"
+ exists_if = "conduit-lwt.cma"
 )
 
 package "async" (
  version = "@VERSION@"
  description = "Resolve URIs into Async channels"
- requires = "uri-conduit @LWT_REQUIRES@"
- archive(byte) = "uri-conduit-async.cma"
- archive(byte, plugin) = "uri-conduit-async.cma"
- archive(native) = "uri-conduit-async.cmxa"
- archive(native, plugin) = "uri-conduit-async.cmxs"
- exists_if = "uri-conduit-async.cma"
+ requires = "conduit @LWT_REQUIRES@"
+ archive(byte) = "conduit-async.cma"
+ archive(byte, plugin) = "conduit-async.cma"
+ archive(native) = "conduit-async.cmxa"
+ archive(native, plugin) = "conduit-async.cmxs"
+ exists_if = "conduit-async.cma"
 )
