--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-lib/uri-conduit-async.mllib
-lib/uri-conduit-lwt.mllib
+lib/conduit-async.mllib
+lib/conduit-lwt.mllib
 _tags
 META
 _build/
+.*.swp
