Hook Mirage into the build

--- a/META.in
+++ b/META.in
@@ -18,6 +18,28 @@ package "lwt" (
  exists_if = "conduit-lwt.cma"
 )
 
+package "lwt-unix" (
+ version = "@VERSION@"
+ description = "Resolve URIs into Lwt channels under Unix"
+ requires = "conduit.lwt @LWT_UNIX_REQUIRES@"
+ archive(byte) = "conduit-lwt-unix.cma"
+ archive(byte, plugin) = "conduit-lwt-unix.cma"
+ archive(native) = "conduit-lwt-unix.cmxa"
+ archive(native, plugin) = "conduit-lwt-unix.cmxs"
+ exists_if = "conduit-lwt-unix.cma"
+)
+
+package "mirage" (
+ version = "@VERSION@"
+ description = "Resolve URIs into Lwt channels under Mirage"
+ requires = "conduit.lwt @LWT_MIRAGE_REQUIRES@"
+ archive(byte) = "conduit-lwt-mirage.cma"
+ archive(byte, plugin) = "conduit-lwt-mirage.cma"
+ archive(native) = "conduit-lwt-mirage.cmxa"
+ archive(native, plugin) = "conduit-lwt-mirage.cmxs"
+ exists_if = "conduit-lwt-mirage.cma"
+)
+
 package "async" (
  version = "@VERSION@"
  description = "Resolve URIs into Async channels"
