Fix link issues.

--- a/META.in
+++ b/META.in
@@ -32,23 +32,12 @@ package "lwt-unix" (
 package "mirage" (
  version = "@VERSION@"
  description = "Resolve URIs into Lwt channels under Mirage"
- requires = "conduit.lwt @LWT_MIRAGE_REQUIRES@"
+ requires = "conduit.lwt @MIRAGE_REQUIRES@"
  archive(byte) = "conduit-lwt-mirage.cma"
  archive(byte, plugin) = "conduit-lwt-mirage.cma"
  archive(native) = "conduit-lwt-mirage.cmxa"
  archive(native, plugin) = "conduit-lwt-mirage.cmxs"
  exists_if = "conduit-lwt-mirage.cma"
-)
-
-package "mirage-xen" (
- version = "@VERSION@"
- description = "Mirage Xen implementations of Conduit libraries"
- requires = "conduit.mirage @LWT_MIRAGE_XEN_REQUIRES@"
- archive(byte) = "conduit-lwt-mirage-xen.cma"
- archive(byte, plugin) = "conduit-lwt-mirage-xen.cma"
- archive(native) = "conduit-lwt-mirage-xen.cmxa"
- archive(native, plugin) = "conduit-lwt-mirage-xen.cmxs"
- exists_if = "conduit-lwt-mirage-xen.cma"
 )
 
 package "async" (
