--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ script: bash -ex .travis-opam.sh
 sudo: required
 env:
   - OCAML_VERSION=4.02
-  - OCAML_VERSION=4.01
+  - OCAML_VERSION=4.01 POST_INSTALL_HOOKS="make -C tests"
   - OCAML_VERSION=4.02 DEPOPTS=lwt
   - OCAML_VERSION=4.02 DEPOPTS=async
   - OCAML_VERSION=4.02 DEPOPTS=async_ssl
