--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -5,13 +5,19 @@ homepage:     "https://github.com/mirage/ocaml-conduit"
 dev-repo:     "https://github.com/mirage/ocaml-conduit.git"
 bug-reports:  "https://github.com/mirage/ocaml-conduit/issues"
 tags:         "org:mirage"
+license:      "ISC"
 
 build:   ["ocamlfind" "query" "conduit.mirage"]
 depends: [
   "mirage-types" {>= "2.0.0"}
-  "mirage-dns" {>= "2.0.0"}
+  "mirage-dns"   {>= "2.0.0"}
+  "conduit"      {>= "0.8.4"}
+]
+depopts: [
   "vchan"
-  "conduit" {>= "0.8.0"}
-  "tls" {>= "0.5.0"}
+  "tls"
+]
+conflicts: [
+  "tls" {< "0.5.0"}
 ]
 available: [ocaml-version >="4.01.0"]
