--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -9,9 +9,9 @@ license:      "ISC"
 
 build:   ["ocamlfind" "query" "conduit.mirage"]
 depends: [
-  "mirage-types" {>= "2.0.0"}
-  "mirage-dns"   {>= "2.0.0"}
-  "conduit"      {>= "0.8.4"}
+  "mirage-types-lwt" {>= "2.0.0"}
+  "mirage-dns" {>= "2.0.0"}
+  "conduit"    {>= "0.8.4"}
 ]
 depopts: [
   "vchan"
