travis: remove tls until mirleft/ocaml-tls#320 is resolved

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script: bash ./.travis-docker.sh
 env:
  global:
    - PACKAGE="conduit"
-   - DEPOPTS="async_ssl lwt mirage-dns ssl tls"
+   - DEPOPTS="async_ssl lwt mirage-dns ssl"
  matrix:
    - DISTRO=debian-stable OCAML_VERSION=4.02.3
    - DISTRO=debian-testing OCAML_VERSION=4.02.3
