Remove extra require params
VCHAN_LWT_REQUIRES and LAUNCHD_LWT_REQUIRES don't need to exist as the
convention is to mutate existing REQUIRES vars with the optional findlib
deps

--- a/META.in
+++ b/META.in
@@ -21,7 +21,7 @@ package "lwt" (
 package "lwt-unix" (
  version = "@VERSION@"
  description = "Resolve URIs into Lwt channels under Unix"
- requires = "conduit.lwt @LWT_UNIX_REQUIRES@ @VCHAN_LWT_REQUIRES@ @LAUNCHD_LWT_REQUIRES@"
+ requires = "conduit.lwt @LWT_UNIX_REQUIRES@"
  archive(byte) = "conduit-lwt-unix.cma"
  archive(byte, plugin) = "conduit-lwt-unix.cma"
  archive(native) = "conduit-lwt-unix.cmxa"
