--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -12,6 +12,7 @@ depends: [
   "mirage-types-lwt" {>= "2.3.0"}
   "mirage-dns" {>= "2.0.0"}
   "conduit"    {>= "0.8.4"}
+  "mirage-runtime"
 ]
 depopts: [
   "vchan"
