modernize mirage tests
Use the generic devices and keys provided by Functoria for
configuration.
Use Logs instead of Console in vchan example for more clarity.
Take a Time module argument in vchan example instead of referring
directly to OS.Time.
Remove unused build.sh in vchan directory and just configure with the
right arguments from Makefile.

--- a/tests/mirage/Makefile
+++ b/tests/mirage/Makefile
@@ -8,7 +8,7 @@ http-fetch-unix:
 	cd http-fetch && mirage configure -t unix && make
 
 vchan-client-xen:
-	cd vchan && mirage configure -f config_client.ml && make
+	cd vchan && mirage configure -f config_client.ml -t xen && make
 
 vchan-server-xen:
-	cd vchan && mirage configure -f config_server.ml && make
+	cd vchan && mirage configure -f config_server.ml -t xen && make
