--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -9,10 +9,9 @@ license:      "ISC"
 
 build:   ["ocamlfind" "query" "conduit.mirage"]
 depends: [
-  "mirage-types-lwt" {>= "2.3.0"}
+  "mirage-flow-lwt" {>= "1.2.0"}
   "mirage-dns" {>= "2.0.0"}
   "conduit"    {>= "0.8.4"}
-  "mirage-runtime"
 ]
 depopts: [
   "vchan"
