--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ env:
  global:
    - PACKAGE="conduit"
    - DEPOPTS="async_ssl lwt mirage-dns ssl tls"
+   - EXTRA_REMOTES="https://github.com/mirage/mirage-dev.git"
    - FORK_BRANCH=HEAD
  matrix:
    - DISTRO=debian-stable OCAML_VERSION=4.02.3
    - DISTRO=debian-testing OCAML_VERSION=4.02.3
-   - DISTRO=debian-unstable OCAML_VERSION=4.02.3
+   - DISTRO=debian-unstable OCAML_VERSION=4.04.0
    - DISTRO=ubuntu-12.04 OCAML_VERSION=4.02.3
    - DISTRO=ubuntu-16.04 OCAML_VERSION=4.03.0
    - DISTRO=centos-6 OCAML_VERSION=4.02.3
