start porting to jbuilder

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,4 @@
-lib/conduit.mllib
-lib/conduit-async.mllib
-lib/conduit-lwt.mllib
-lib/conduit-lwt-unix.mllib
-lib/conduit-lwt-mirage.mllib
-lib/conduit-lwt-mirage-xen.mllib
-lib/conduit-lwt-mirage-unix.mllib
-_tags
-META
 _build/
-_install/
 .*.swp
-*.odocl
-*.docdir
-*.stamp
-*.xen
-*.xml
-*.native
-*.byte
-*.xl
-ppx
-*.mlh
-*.itarget
-*.cmx*
-*.cma
+*.install
+.merlin
