fix conduit-mirage build

--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -7,19 +7,18 @@ bug-reports:  "https://github.com/mirage/ocaml-conduit/issues"
 tags:         "org:mirage"
 license:      "ISC"
 
-build:   ["ocamlfind" "query" "conduit.mirage"]
+build: [
+  ["jbuilder" "subst" "-p" name "--name" name] {pinned}
+  ["jbuilder" "build" "-p" name "-j" jobs]
+]
+
 depends: [
   "cstruct"          {>= "1.0.1"}
   "mirage-types-lwt" {>= "3.0.0"}
   "mirage-flow-lwt"  {>= "1.2.0"}
   "mirage-dns"       {>= "2.6.0"}
-  "conduit"          {>= "0.15.0"}
-]
-depopts: [
+  "conduit"
   "vchan"
-  "tls"
-]
-conflicts: [
-  "tls" {< "0.8.0"}
+  "tls" {>="0.8.0"}
 ]
 available: [ocaml-version >="4.03.0"]
