--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,11 @@ env:
    - PACKAGE="conduit"
    - DEPOPTS="mirage-conduit conduit-async conduit-lwt conduit-lwt-unix"
  matrix:
+   - DISTRO=debian-stable OCAML_VERSION=4.04.1
    - DISTRO=debian-testing OCAML_VERSION=4.03.0
    - DISTRO=debian-unstable OCAML_VERSION=4.04.1
    - DISTRO=ubuntu-16.04 OCAML_VERSION=4.03.0
+   - DISTRO=ubuntu-17.04 OCAML_VERSION=4.04.1
    - DISTRO=centos-6 OCAML_VERSION=4.03.0
    - DISTRO=centos-7 OCAML_VERSION=4.04.1
    - DISTRO=fedora-25 OCAML_VERSION=4.03.0
