--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -16,6 +16,9 @@ depends: [
   "ppx_sexp_conv" {build}
   "conduit"
   "async" {>="v0.9.0"}
-  "async_ssl" {>="v0.9.0"}
+]
+depopts: [ "async_ssl" ]
+conflicts: [
+  "async_ssl" {<"v0.9.0" }
 ]
 available: [ocaml-version >= "4.03.0"]
