--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
    - DISTRO=debian-testing OCAML_VERSION=4.03.0
    - PRE_INSTALL_HOOK="opam depext -uiy ssl" DISTRO=debian-unstable OCAML_VERSION=4.04.1
    - DISTRO=ubuntu-16.04 OCAML_VERSION=4.03.0
-   - PRE_INSTALL_HOOK="opam depext -uiy async_ssl" DISTRO=ubuntu-17.04 OCAML_VERSION=4.04.1
+   - PRE_INSTALL_HOOK="opam depext -uiy ctypes-foreign async_ssl" DISTRO=ubuntu-17.04 OCAML_VERSION=4.04.1
    - DISTRO=centos-6 OCAML_VERSION=4.03.0
    - DISTRO=centos-7 OCAML_VERSION=4.04.1
    - DISTRO=fedora-25 OCAML_VERSION=4.03.0
