use the dns.3.0 interfaces and add the staging remote to the tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/ma
 script: bash ./.travis-docker.sh
 env:
  global:
+   - EXTRA_REMOTES="https://github.com/mirage/mirage-dev.git"
    - PINS="conduit:. mirage-conduit:. conduit-async:. conduit-lwt:. conduit-lwt-unix:."
    - PACKAGE="conduit"
    - DEPOPTS="mirage-conduit conduit-async conduit-lwt conduit-lwt-unix"
