--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -14,7 +14,7 @@ build: [
 depends: [
   "jbuilder" {build & >="1.0+beta9"}
   "ppx_sexp_conv" {build}
-  "conduit" {>="1.0.0"}
+  "conduit"
   "async" {>="v0.9.0"}
 ]
 depopts: [ "async_ssl" ]
