--- a/conduit-lwt.opam
+++ b/conduit-lwt.opam
@@ -14,7 +14,7 @@ build: [
 depends: [
   "base-unix"
   "jbuilder" {build & >="1.0+beta9"}
-  "conduit" {>="1.0.0"}
+  "conduit"
   "lwt" {>="3.0.0"}
 ]
 available: [ocaml-version >= "4.03.0"]
