--- a/conduit.opam
+++ b/conduit.opam
@@ -15,7 +15,7 @@ depends: [
   "jbuilder" {build & >="1.0+beta9"}
   "ppx_sexp_conv" {build}
   "sexplib"
-  "stringext"
+  "astring"
   "uri"
   "result"
   "logs" {>="0.5.0"}
