Fix appveyor scripts

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,9 +5,9 @@ environment:
   CYG_ROOT: "C:\\cygwin"
   CYG_BASH: "%CYG_ROOT%\\bin\\bash -lc"
   TESTS: "false"
-  PINS: "conduit.0.15.0:. mirage-conduit:."
+  PINS: "conduit.dev:. conduit-lwt.dev:. mirage-conduit.dev:."
   EXTRA_REMOTES: "https://github.com/mirage/mirage-dev.git"
-  PACKAGE: "mirage-conduit"
+  PACKAGE: "mirage-conduit.dev"
 
 install:
   - appveyor DownloadFile https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/appveyor-opam.sh
