--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -11,13 +11,14 @@ build: [
   ["jbuilder" "subst" "-p" name "--name" name] {pinned}
   ["jbuilder" "build" "-p" name "-j" jobs]
 ]
+build-test: ["jbuilder" "runtest" "-p" name]
 
 depends: [
   "cstruct"          {>= "3.0.0"}
   "mirage-types-lwt" {>= "3.0.0"}
   "mirage-flow-lwt"  {>= "1.2.0"}
   "mirage-dns"       {>= "3.0.0"}
-  "conduit-lwt" 
+  "conduit-lwt"
   "vchan"            {>= "3.0.0"}
   "tls"              {>="0.8.0"}
 ]
