--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -14,6 +14,8 @@ build: [
 build-test: ["jbuilder" "runtest" "-p" name]
 
 depends: [
+  "jbuilder" {build & >="1.0+beta9"}
+  "ppx_sexp_conv" {build}
   "cstruct"          {>= "3.0.0"}
   "mirage-types-lwt" {>= "3.0.0"}
   "mirage-flow-lwt"  {>= "1.2.0"}
