--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script: bash ./.travis-docker.sh
 env:
  global:
    - PINS="conduit:. mirage-conduit:. conduit-async:. conduit-lwt:. conduit-lwt-unix:."
+   - TESTS=true
  matrix:
    - OCAML_VERSION=4.04.2 PACKAGE=conduit-lwt-unix DISTRO=debian-stable   DEPOPTS="ssl tls"
    - OCAML_VERSION=4.04.2 PACKAGE=conduit-async    DISTRO=centos-7        DEPOPTS=async_ssl
