--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -22,6 +22,7 @@ depends: [
   "mirage-dns"       {>= "3.0.0"}
   "conduit-lwt"
   "vchan"            {>= "3.0.0"}
+  "xenstore"
   "tls"              {>="0.8.0"}
 ]
 available: [ocaml-version >="4.03.0"]
