--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -14,6 +14,7 @@ build: [
 depends: [
   "jbuilder" {build & >="1.0+beta9"}
   "ppx_sexp_conv" {build}
+  "sexplib"
   "conduit"
   "async" {>= "v0.10.0"}
 ]
