--- a/conduit-lwt.opam
+++ b/conduit-lwt.opam
@@ -15,6 +15,7 @@ depends: [
   "base-unix"
   "jbuilder" {build & >="1.0+beta9"}
   "ppx_sexp_conv" {build}
+  "sexplib"
   "conduit"
   "lwt" {>="3.0.0"}
 ]
