require ppx_sexp_conv < v0.11.0

--- a/conduit.opam
+++ b/conduit.opam
@@ -13,7 +13,7 @@ build: [
 ]
 depends: [
   "jbuilder" {build & >="1.0+beta9"}
-  "ppx_sexp_conv" {build}
+  "ppx_sexp_conv" {build & < "v0.11.0"}
   "sexplib"
   "astring"
   "uri"
