Bring back proper sexp converters
Apply them consistently everywhere in Conduit_async and fix the opam dependency.

Signed-off-by: Rudi Grinberg <rudi.grinberg@gmail.com>

--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -13,7 +13,8 @@ build: [
 ]
 depends: [
   "jbuilder" {build & >="1.0+beta9"}
-  "ppx_sexp_conv" {build}
+  "core"
+  "ppx_sexp_conv"
   "sexplib"
   "conduit"
   "async" {>= "v0.10.0"}
