--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -8,11 +8,11 @@ tags:         "org:mirage"
 license:      "ISC"
 
 build: [
-  ["jbuilder" "subst" "-n" name] {pinned}
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "subst"] {pinned}
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "jbuilder" {build & >="1.0+beta9"}
+  "dune" {build}
   "core"
   "ppx_sexp_conv"
   "sexplib"
