--- a/conduit.opam
+++ b/conduit.opam
@@ -9,11 +9,11 @@ license:      "ISC"
 doc:          "https://mirage.github.io/ocaml-conduit/"
 
 build: [
-  ["jbuilder" "subst" "-n" name] {pinned}
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "subst"] {pinned}
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "jbuilder" {build & >="1.0+beta9"}
+  "dune" {build}
   "ppx_sexp_conv"
   "sexplib"
   "astring"
