--- a/async/dune
+++ b/async/dune
@@ -1,12 +1,10 @@
-(jbuild_version 1)
-
 (library
- ((name        conduit_async)
-  (public_name conduit-async)
-  (modules (conduit_async private_ssl v1 v2 s))
-  (preprocess (pps (ppx_sexp_conv)))
-  (libraries
-   (conduit async
+ (name        conduit_async)
+ (public_name conduit-async)
+ (modules     conduit_async private_ssl v1 v2 s)
+ (preprocess  (pps ppx_sexp_conv))
+ (libraries
+   conduit async
 
     (select private_ssl.ml from
      (async_ssl  -> private_ssl_real.ml)
@@ -18,4 +16,4 @@
 
     (select v2.mli from
      (async_ssl  -> v2_real.mli)
-     (!async_ssl -> v2_dummy.mli))))))
+     (!async_ssl -> v2_dummy.mli))))
