--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -8,13 +8,13 @@ tags:         "org:mirage"
 license:      "ISC"
 
 build: [
-  ["jbuilder" "subst" "-n" name] {pinned}
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "subst"] {pinned}
+  ["dune" "build" "-p" name "-j" jobs]
 ]
-build-test: ["jbuilder" "runtest" "-p" name]
+build-test: ["dune" "runtest" "-p" name]
 
 depends: [
-  "jbuilder" {build & >="1.0+beta9"}
+  "dune" {build}
   "ppx_sexp_conv"
   "sexplib"
   "cstruct"          {>= "3.0.0"}
