--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -18,7 +18,8 @@ depends: [
   "ppx_sexp_conv"
   "sexplib"
   "cstruct"          {>= "3.0.0"}
-  "mirage-types-lwt" {>= "3.0.0"}
+  "mirage-stack-lwt" {>= "1.3.0"}
+  "mirage-time-lwt"  {>= "1.1.0"}
   "mirage-flow-lwt"  {>= "1.2.0"}
   "mirage-dns"       {>= "3.0.0"}
   "conduit-lwt"
