--- a/lib/dune
+++ b/lib/dune
@@ -4,4 +4,4 @@
   (wrapped     false)
   (preprocess  (pps ppx_sexp_conv))
   (modules     conduit conduit_trie resolver)
-  (libraries   ipaddr uri astring))
+  (libraries   sexplib ipaddr ipaddr.sexp uri astring))
