--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -1,17 +1,14 @@
-opam-version: "1.2"
-maintainer:   "anil@recoil.org"
-authors:      ["Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire" "Rudi Grinberg"]
-homepage:     "https://github.com/mirage/ocaml-conduit"
-dev-repo:     "https://github.com/mirage/ocaml-conduit.git"
-bug-reports:  "https://github.com/mirage/ocaml-conduit/issues"
-tags:         "org:mirage"
-license:      "ISC"
-
-build: [
-  ["dune" "subst"] {pinned}
-  ["dune" "build" "-p" name "-j" jobs]
+opam-version: "2.0"
+maintainer: "anil@recoil.org"
+authors: [
+  "Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire" "Rudi Grinberg"
 ]
+license: "ISC"
+tags: "org:mirage"
+homepage: "https://github.com/mirage/ocaml-conduit"
+bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 depends: [
+  "ocaml" {>= "4.03.0"}
   "dune" {build}
   "core"
   "ppx_sexp_conv"
@@ -19,8 +16,13 @@ depends: [
   "conduit"
   "async" {>= "v0.10.0"}
 ]
-depopts: [ "async_ssl" ]
+depopts: ["async_ssl"]
 conflicts: [
-  "async_ssl" {<"v0.9.0" }
+  "async_ssl" {< "v0.9.0"}
 ]
-available: [ocaml-version >= "4.03.0"]
+build: [
+  ["dune" "subst"] {pinned}
+  ["dune" "build" "-p" name "-j" jobs]
+]
+dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
+synopsis: "A network connection establishment library for Async"
