--- a/conduit-lwt-unix.opam
+++ b/conduit-lwt-unix.opam
@@ -1,31 +1,29 @@
-opam-version: "1.2"
-maintainer:   "anil@recoil.org"
-authors:      ["Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire" "Rudi Grinberg"]
-homepage:     "https://github.com/mirage/ocaml-conduit"
-dev-repo:     "https://github.com/mirage/ocaml-conduit.git"
-bug-reports:  "https://github.com/mirage/ocaml-conduit/issues"
-tags:         "org:mirage"
-license:      "ISC"
-
-build: [
-  ["dune" "subst"] {pinned}
-  ["dune" "build" "-p" name "-j" jobs]
+opam-version: "2.0"
+maintainer: "anil@recoil.org"
+authors: [
+  "Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire" "Rudi Grinberg"
 ]
+license: "ISC"
+tags: "org:mirage"
+homepage: "https://github.com/mirage/ocaml-conduit"
+bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 depends: [
+  "ocaml" {>= "4.03.0"}
   "dune" {build}
   "base-unix"
   "ppx_sexp_conv"
   "conduit-lwt"
   "lwt" {>= "3.0.0"}
-  "uri" {>="1.9.4"}
-  "ipaddr" {>="2.8.0"}
+  "uri" {>= "1.9.4"}
+  "ipaddr" {>= "3.0.0"}
 ]
-depopts: [
-  "tls"
-  "lwt_ssl"
-  "launchd"
-]
+depopts: ["tls" "lwt_ssl" "launchd"]
 conflicts: [
-  "tls" {<"0.8.0" }
+  "tls" {< "0.8.0"}
 ]
-available: [ocaml-version >= "4.03.0"]
+build: [
+  ["dune" "subst"] {pinned}
+  ["dune" "build" "-p" name "-j" jobs]
+]
+dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
+synopsis: "A network connection establishment library for Lwt_unix"
