--- a/lib/dune
+++ b/lib/dune
@@ -5,3 +5,6 @@
   (preprocess  (pps ppx_sexp_conv))
   (modules     conduit conduit_trie resolver)
   (libraries   sexplib ipaddr ipaddr.sexp uri astring))
+
+(documentation
+ (package conduit))
