--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "3.1.0"
 maintainer: "anil@recoil.org"
 authors: ["Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire"]
 license: "ISC"
@@ -10,6 +11,7 @@ depends: [
   "dune" {build}
   "ppx_sexp_conv"
   "sexplib"
+  "ipaddr" {>="3.0.0"}
   "cstruct" {>= "3.0.0"}
   "mirage-stack-lwt" {>= "1.3.0"}
   "mirage-time-lwt" {>= "1.1.0"}
