conduit-async, mirage-conduit: direct dependency on ipaddr

--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -19,6 +19,7 @@ depends: [
   "vchan" {>= "3.0.0"}
   "xenstore"
   "tls" {>= "0.8.0"}
+  "ipaddr" {>= "3.0.0"}
 ]
 build: [
   ["dune" "subst"] {pinned}
