--- a/async/dune
+++ b/async/dune
@@ -1,10 +1,10 @@
 (library
  (name        conduit_async)
  (public_name conduit-async)
- (modules     conduit_async private_ssl v1 v2 s)
- (preprocess  (pps ppx_sexp_conv))
+ (modules     conduit_async private_ssl v1 v2 v3 s)
+ (preprocess  (pps ppx_here ppx_sexp_conv))
  (libraries
-   conduit async
+   conduit async ipaddr.unix uri.services
 
     (select private_ssl.ml from
      (async_ssl  -> private_ssl_real.ml)
@@ -16,4 +16,8 @@
 
     (select v2.mli from
      (async_ssl  -> v2_real.mli)
-     (!async_ssl -> v2_dummy.mli))))
+     (!async_ssl -> v2_dummy.mli))
+
+    (select v3.mli from
+     (async_ssl  -> v3_real.mli)
+     (!async_ssl -> v3_dummy.mli))))
