--- a/conduit.opam
+++ b/conduit.opam
@@ -10,13 +10,14 @@ doc: "https://mirage.github.io/ocaml-conduit/"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 depends: [
   "ocaml" {>= "4.03.0"}
-  "dune" {build}
-  "ppx_sexp_conv"
+  "dune"
+  "ppx_sexp_conv" {>="v0.9.0"}
   "sexplib"
   "astring"
   "uri"
   "logs" {>= "0.5.0"}
-  "ipaddr" {>= "3.0.0"}
+  "ipaddr" {>= "4.0.0"}
+  "ipaddr-sexp"
 ]
 build: [
   ["dune" "subst"] {pinned}
