--- a/lib/dune
+++ b/lib/dune
@@ -4,7 +4,7 @@
   (wrapped     false)
   (preprocess  (pps ppx_sexp_conv))
   (modules     conduit conduit_trie resolver)
-  (libraries   sexplib ipaddr ipaddr.sexp uri astring))
+  (libraries   sexplib ipaddr ipaddr-sexp uri astring))
 
 (documentation
  (package conduit))
