--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -9,11 +9,11 @@ homepage: "https://github.com/mirage/ocaml-conduit"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 depends: [
   "ocaml" {>= "4.03.0"}
-  "dune" {build}
+  "dune"
   "core"
-  "ppx_sexp_conv"
+  "ppx_sexp_conv" {>="v0.9.0"}
   "sexplib"
-  "conduit"
+  "conduit" {=version}
   "async" {>= "v0.10.0"}
   "ipaddr" {>= "3.0.0"}
 ]
