--- a/conduit-lwt-unix.opam
+++ b/conduit-lwt-unix.opam
@@ -12,7 +12,7 @@ depends: [
   "dune"
   "base-unix"
   "ppx_sexp_conv" {>="v0.9.0"}
-  "conduit-lwt"
+  "conduit-lwt" {=version}
   "lwt" {>= "3.0.0"}
   "uri" {>= "1.9.4"}
   "ipaddr" {>= "4.0.0"}
