--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -7,8 +7,8 @@ homepage: "https://github.com/mirage/ocaml-conduit"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 depends: [
   "ocaml" {>= "4.03.0"}
-  "dune" {build}
-  "ppx_sexp_conv"
+  "dune"
+  "ppx_sexp_conv" {>="v0.9.0"}
   "sexplib"
   "cstruct" {>= "3.0.0"}
   "mirage-stack-lwt" {>= "1.3.0"}
@@ -20,6 +20,7 @@ depends: [
   "xenstore"
   "tls" {>= "0.8.0"}
   "ipaddr" {>= "3.0.0"}
+  "ipaddr-sexp"
 ]
 build: [
   ["dune" "subst"] {pinned}
