--- a/mirage-conduit.opam
+++ b/mirage-conduit.opam
@@ -14,6 +14,7 @@ depends: [
   "mirage-stack-lwt" {>= "1.3.0"}
   "mirage-time-lwt" {>= "1.1.0"}
   "mirage-flow-lwt" {>= "1.2.0"}
+  "mirage-random" {>= "1.2.0"}
   "dns-client" {>= "4.0.0"}
   "conduit-lwt"
   "vchan" {>= "3.0.0"}
@@ -21,6 +22,11 @@ depends: [
   "tls" {>= "0.8.0"}
   "ipaddr" {>= "3.0.0"}
   "ipaddr-sexp"
+
+  #these are required for tls.mirage, which mirage-conduit depends on
+  "mirage-kv-lwt" {>= "2.0.0"}
+  "mirage-clock" {>= "2.0.0"}
+  "ptime"
 ]
 build: [
   ["dune" "subst"] {pinned}
