--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -23,7 +23,7 @@ depends: [
   "ipaddr" {>= "3.0.0"}
   "ipaddr-sexp"
 
-  #these are required for tls.mirage, which mirage-conduit depends on
+  #these are required for tls.mirage, which conduit-mirage depends on
   "mirage-kv-lwt" {>= "2.0.0"}
   "mirage-clock" {>= "2.0.0"}
   "ptime"
