--- a/conduit.opam
+++ b/conduit.opam
@@ -44,5 +44,5 @@ The useful opam packages available that extend this library are:
 - `conduit-lwt`: the portable Lwt implementation
 - `conduit-lwt-unix`: the Lwt/Unix implementation
 - `conduit-async` the Jane Street Async implementation
-- `mirage-conduit`: the MirageOS compatible implementation
+- `conduit-mirage`: the MirageOS compatible implementation
 """
