conduit-mirage: conflict with mirage-conduit

--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -28,6 +28,10 @@ depends: [
   "mirage-clock" {>= "2.0.0"}
   "ptime"
 ]
+conflicts: [
+  "mirage-conduit"
+]
+
 build: [
   ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
