--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ env:
    - PINS="conduit:. conduit-mirage:. conduit-async:. conduit-lwt:. conduit-lwt-unix:."
    - TESTS=true
  matrix:
-   - OCAML_VERSION=4.08 PACKAGE=conduit-lwt-unix DISTRO=debian-stable   DEPOPTS="ssl tls"
+   - OCAML_VERSION=4.08 PACKAGE=conduit-lwt-unix DISTRO=debian-stable   DEPOPTS="lwt_ssl tls"
    - OCAML_VERSION=4.07 PACKAGE=conduit-mirage   DISTRO=alpine
-   - OCAML_VERSION=4.07 PACKAGE=conduit-lwt-unix DISTRO=debian-stable   DEPOPTS="ssl tls"
-   - OCAML_VERSION=4.06 PACKAGE=conduit-lwt-unix DISTRO=debian-unstable DEPOPTS="ssl tls"
+   - OCAML_VERSION=4.07 PACKAGE=conduit-lwt-unix DISTRO=debian-stable   DEPOPTS="lwt_ssl tls"
+   - OCAML_VERSION=4.06 PACKAGE=conduit-lwt-unix DISTRO=debian-unstable DEPOPTS="lwt_ssl tls"
    - OCAML_VERSION=4.05 PACKAGE=conduit-async    DISTRO=debian-unstable DEPOPTS=async_ssl
-   - OCAML_VERSION=4.04 PACKAGE=conduit-lwt-unix DISTRO=debian-testing  DEPOPTS="ssl tls"
+   - OCAML_VERSION=4.04 PACKAGE=conduit-lwt-unix DISTRO=debian-testing  DEPOPTS="lwt_ssl tls"
    - OCAML_VERSION=4.06 PACKAGE=conduit-async    DISTRO=centos          DEPOPTS=async_ssl
-   - OCAML_VERSION=4.06 PACKAGE=conduit-lwt-unix DISTRO=alpine          DEPOPTS="ssl tls"
+   - OCAML_VERSION=4.06 PACKAGE=conduit-lwt-unix DISTRO=alpine          DEPOPTS="lwt_ssl tls"
    - OCAML_VERSION=4.06 PACKAGE=conduit-async    DISTRO=ubuntu          DEPOPTS=async_ssl
-   - OCAML_VERSION=4.06 PACKAGE=conduit-lwt-unix DISTRO=fedora          DEPOPTS="ssl tls"
+   - OCAML_VERSION=4.06 PACKAGE=conduit-lwt-unix DISTRO=fedora          DEPOPTS="lwt_ssl tls"
