--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -11,10 +11,11 @@ depends: [
   "ppx_sexp_conv" {>="v0.9.0"}
   "sexplib"
   "cstruct" {>= "3.0.0"}
-  "mirage-stack-lwt" {>= "1.3.0"}
-  "mirage-time-lwt" {>= "1.1.0"}
-  "mirage-flow-lwt" {>= "1.2.0"}
-  "mirage-random" {>= "1.2.0"}
+  "mirage-stack" {>= "2.0.0"}
+  "mirage-time" {>= "2.0.0"}
+  "mirage-flow" {>= "2.0.0"}
+  "mirage-flow-combinators" {>= "2.0.0"}
+  "mirage-random" {>= "2.0.0"}
   "dns-client" {>= "4.0.0"}
   "conduit-lwt"
   "vchan" {>= "3.0.0"}
@@ -24,8 +25,8 @@ depends: [
   "ipaddr-sexp"
 
   #these are required for tls.mirage, which conduit-mirage depends on
-  "mirage-kv-lwt" {>= "2.0.0"}
-  "mirage-clock" {>= "2.0.0"}
+  "mirage-kv" {>= "3.0.0"}
+  "mirage-clock" {>= "3.0.0"}
   "ptime"
 ]
 conflicts: [
