adapt to dns 4.1.0 changes

--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -12,11 +12,11 @@ depends: [
   "sexplib"
   "cstruct" {>= "3.0.0"}
   "mirage-stack" {>= "2.0.0"}
-  "mirage-time" {>= "2.0.0"}
+  "mirage-clock" {>= "3.0.0"}
   "mirage-flow" {>= "2.0.0"}
   "mirage-flow-combinators" {>= "2.0.0"}
   "mirage-random" {>= "2.0.0"}
-  "dns-client" {>= "4.0.0"}
+  "dns-client" {>= "4.1.0"}
   "conduit-lwt"
   "vchan" {>= "3.0.0"}
   "xenstore"
