--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -6,7 +6,7 @@ tags: "org:mirage"
 homepage: "https://github.com/mirage/ocaml-conduit"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 depends: [
-  "ocaml" {>= "4.03.0"}
+  "ocaml" {>= "4.07.0"}
   "dune"
   "ppx_sexp_conv" {>="v0.9.0"}
   "sexplib"
@@ -20,14 +20,10 @@ depends: [
   "conduit-lwt"
   "vchan" {>= "5.0.0"}
   "xenstore"
-  "tls" {>= "0.8.0"}
+  "tls" {>= "0.11.0"}
+  "tls-mirage" {>= "0.11.0"}
   "ipaddr" {>= "3.0.0"}
   "ipaddr-sexp"
-
-  #these are required for tls.mirage, which conduit-mirage depends on
-  "mirage-kv" {>= "3.0.0"}
-  "mirage-clock" {>= "3.0.0"}
-  "ptime"
 ]
 conflicts: [
   "mirage-conduit"
