--- a/mirage/dune
+++ b/mirage/dune
@@ -6,4 +6,4 @@
   (wrapped     false)
   (libraries   conduit conduit-lwt mirage-stack mirage-clock mirage-random
                mirage-flow mirage-flow-combinators dns-client.mirage ipaddr-sexp
-               vchan tls tls.mirage xenstore.client uri.services))
+               vchan tls tls-mirage xenstore.client uri.services))
