gh actions: typo

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         ocaml-version: ${{ matrix.ocaml-version }}
     - name: Deps
       run: |
-        for i in "" -lwt -lwt-unix -async -mirage; do opam pin add -n $i; done
+        for i in "" -lwt -lwt-unix -async -mirage; do opam pin add -n $i .; done
         for i in "" -lwt -lwt-unix -async -mirage; do opam depext -y $i; done
         opam install --deps-only .
     - name: Build
