--- a/lib/dune
+++ b/lib/dune
@@ -1,10 +1,4 @@
 (library
-  (name        conduit)
-  (public_name conduit)
-  (wrapped     false)
-  (preprocess  (pps ppx_sexp_conv))
-  (modules     conduit conduit_trie resolver)
-  (libraries   sexplib ipaddr ipaddr-sexp uri astring))
-
-(documentation
- (package conduit))
+ (name conduit)
+ (public_name conduit)
+ (libraries stdlib-shims domain-name))
