New implementation of conduit-lwt with mirage-flow implementation and helper to start a server
`conduit-lwt` is roughly an application of `conduit` with:
- type input = Cstruct.t
- type output = Cstruct.t
- type +'a s = 'a Lwt.t

Due to the ability to play with the scheduler, `conduit-lwt` provides:
- an implementation of the interface `mirage-flow.2.0.1` (deprecated)
- an helper to start a server
- conduit-tls with lwt

The first is deprecated due to the difference between `Conduit.recv`
and `Mirage_flow.recv`. The documentation tells you more about that.

The second is what `conduit` provided before, a common loop to start
the server with an _handler_. It is used by `ocaml-cohttp`. This helper
is not restricted to a specific protocol.

The third is an application of `conduit-tls` with `conduit-lwt`.

--- a/lwt/dune
+++ b/lwt/dune
@@ -1,7 +1,11 @@
 (library
-  (name        conduit_lwt)
-  (public_name conduit-lwt)
-  (preprocess  (pps ppx_sexp_conv))
-  (wrapped     false)
-  (modules     resolver_lwt)
-  (libraries   conduit lwt))
+ (name conduit_lwt)
+ (public_name conduit-lwt)
+ (modules conduit_lwt)
+ (libraries cstruct lwt conduit))
+
+(library
+ (name conduit_lwt_flow)
+ (public_name conduit-lwt.flow)
+ (modules conduit_lwt_flow)
+ (libraries conduit-lwt mirage-flow))
