--- a/lwt-unix/dune
+++ b/lwt-unix/dune
@@ -1,18 +1,23 @@
 (library
-  (name        conduit_lwt_unix)
-  (public_name conduit-lwt-unix)
-  (preprocess  (pps ppx_sexp_conv))
-  (wrapped     false)
-  (modules     resolver_lwt_unix conduit_lwt_unix conduit_lwt_server
-               conduit_lwt_tls conduit_lwt_unix_ssl conduit_lwt_launchd)
-  (libraries   conduit-lwt lwt.unix uri.services ipaddr-sexp ipaddr.unix logs
-    (select conduit_lwt_launchd.ml from
-      (launchd.lwt -> conduit_lwt_launchd_real.ml)
-      (-> conduit_lwt_launchd_dummy.ml))
-    (select conduit_lwt_unix_ssl.ml from
-      (lwt_ssl -> conduit_lwt_unix_ssl_real.ml)
-      (-> conduit_lwt_unix_ssl_dummy.ml))
-    (select conduit_lwt_tls.ml from
-      (tls.lwt -> conduit_lwt_tls_real.ml)
-      (-> conduit_lwt_tls_dummy.ml))
-  ))
+ (name conduit_lwt_unix)
+ (public_name conduit-lwt-unix)
+ (modules conduit_lwt_unix)
+ (libraries conduit-lwt lwt.unix))
+
+(library
+ (name conduit_lwt_unix_tcp)
+ (public_name conduit-lwt-unix.tcp)
+ (modules conduit_lwt_unix_tcp)
+ (libraries conduit-lwt-unix))
+
+(library
+ (name conduit_lwt_unix_tls)
+ (public_name conduit-lwt-unix.tls)
+ (modules conduit_lwt_unix_tls)
+ (libraries conduit-lwt-unix conduit-lwt-unix.tcp conduit-tls))
+
+(library
+ (name conduit_lwt_unix_ssl)
+ (public_name conduit-lwt-unix.ssl)
+ (modules conduit_lwt_unix_ssl)
+ (libraries conduit-lwt-unix conduit-lwt-unix.tcp lwt_ssl))
