--- a/mirage/dune
+++ b/mirage/dune
@@ -4,6 +4,6 @@
   (preprocess  (pps ppx_sexp_conv))
   (modules     conduit_mirage resolver_mirage conduit_xenstore)
   (wrapped     false)
-  (libraries   conduit conduit-lwt mirage-stack mirage-clock mirage-random
+  (libraries   conduit conduit-lwt mirage-stack mirage-clock mirage-random mirage-time
                mirage-flow mirage-flow-combinators dns-client.mirage ipaddr-sexp
                vchan tls tls-mirage xenstore.client uri.services))
