Add endpoint and replace it by [ `host ] Domain_name.t

--- a/src/async/dune
+++ b/src/async/dune
@@ -1,4 +1,4 @@
 (library
  (name conduit_async)
  (public_name conduit-async)
- (libraries cstruct async conduit))
+ (libraries cstruct async ipaddr.unix conduit))
