--- a/src/core/dune
+++ b/src/core/dune
@@ -1,4 +1,4 @@
 (library
  (name conduit)
  (public_name conduit)
- (libraries stdlib-shims domain-name))
+ (libraries stdlib-shims ipaddr domain-name))
